welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:7: error: 'while' expected but '}' found.
	}else {
        ^sumDouble:9: error: ')' expected but '}' found.
	}
        ^