welcome.lessons.welcome.bat.bool1.SumDouble.scala.code
def sumDouble(a: Integer, b: Integer): Integer = {
	if ( a != b) {
		do (a+b)
	
		
	
	}else {
		do (2*(a+b)
	}
	
}
